[package]
name = "bkash-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Idiomatic async-first Rust client for the bKash Payment Gateway API."
license = "MIT OR Apache-2.0"
authors = ["Dibakar Sutradhar <iamdibakardipu@gmail.com>"]
repository = "https://github.com/dibakarsutradhar/bkash-rs"
homepage = "https://github.com/dibakarsutradhar/bkash-rs"
documentation = "https://docs.rs/bkash-rs"
readme = "README.md"
keywords = ["bkash", "payments", "gateway", "bangladesh", "bdt"]
categories = ["api-bindings", "asynchronous", "finance", "web-programming"]
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
default = ["rustls-tls", "tokenized-checkout", "checkout"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
tokenized-checkout = []
checkout = []
auth-capture = []
subscriptions = []
webhooks = ["dep:rsa", "dep:sha1", "dep:x509-cert", "dep:base64"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tracing = "0.1"

# Webhook dependencies — only pulled in by the `webhooks` feature.
rsa = { version = "0.9", optional = true, features = ["sha1"] }
sha1 = { version = "0.10", optional = true }
x509-cert = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1"
proptest = "1"

[package.metadata.docs.rs]
all-features = true